<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FitAlly</string>

    <string name="launch_activity">Launch activity</string>
    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="desc">Step Count</string>



    <string name="connect_to_shealth">Connect to Samsung Health</string>

    <string name="notice">Notice</string>
    <string name="msg_perm_acquired">All permissions should be acquired</string>
    <string name="msg_conn_not_available">Connection with Samsung Health is not available</string>
    <string name="msg_req_install">Please install Samsung Health</string>
    <string name="msg_req_upgrade">Please upgrade Samsung Health</string>
    <string name="msg_req_enable">Please enable Samsung Health</string>
    <string name="msg_req_agree">Please agree to Samsung Health policy</string>
    <string name="msg_req_available">Please make Samsung Health available</string>>
    <string name="permissions_not_granted">Cancelling, required permissions are not granted</string>
    <string name="error_general">Something went wrong.</string>
    <string name="error_bigger_file">File size is bigger than 10Mb</string>
    <string name="error_incorrect_file_type">Incorrect file type</string>
    <string name="internet_connection_failed">No internet connection</string>
    <string name="button_ok">OK</string>
    <string name="home">Home</string>
    <string name="details">Details</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="helpSetting">Help</string>
    <string name="error_prompt">SM SDK Error - see logs</string>
    <string name="label_post_detail_activity">Post detail</string>
    <string name="post_author_image_transition_name" translatable="false">post_author_image_transition_name</string>
    <string name="post_image_transition_name" translatable="false">post_image_transition</string>
    <string name="logout">Logout</string>
    <string name="app_permission_notice">This permission request is very important to your app functionality. If it is not granted your app might not work the way it is intended</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="required">Required</string>
    <string name="warning_empty_email">Email is required</string>
    <string name="warning_empty_username">Name is required</string>
    <string name="warning_empty_password">Password is required</string>
    <string name="warning_empty_repassword">Repassword is required</string>

    <string name="create">Create</string>
    <string name="email">Email</string>
    <string name="username">Username</string>

    <string name="age">Age</string>
    <string name="current_weight">Current Weight</string>
    <string name="target">Target Weight</string>
    <string name="select_chharity">Please select a charity below</string>
    <string name="description">When you do not meet your goal, you are penalized to donate to a charity of your choice which you can choose below</string>
    <string name="charity_one">£1</string>
    <string name="charity_two">£3</string>
    <string name="charity_three">£5</string>
    <string name="charity_four">£10</string>
    <string name="error_smaller_image">Image is too small. Required image size 100x100 px</string>
    <string name="cancel">Cancel</string>
    <string name="storage_link">gs://fitness-922a8.appspot.com</string>
    <string name="todo">TODO</string>
    <string name="welcome_message">Set Password for your Account</string>
    <string name="welcome">Welcome</string>
    <string name="ok">OK</string>
    <string name="loading">Loading â€¦</string>
    <string name="error_fail_crop_image">Fail to crop image</string>
    <string name="height">Height in cm</string>
    <string name="next">NEXT</string>
    <string name="login_text">Set Credentials</string>

    <string name="move_before">Move Day Before</string>
    <string name="move_next">Move Day Next</string>
    <string name="title_activity_edit_profile">Profile</string>

    <string name="i_agree_with_terms_and_conditions">I agree with Terms and Conditions</string>

    <string name="continue_next">Continue</string>

    <string name="re_password">Re-Password</string>
    <string name="your_steps">View Your Steps</string>
    <string name="arena">Arena</string>
    <string name="stats">Stats in depth</string>
    <string name="start_competition">Start Competition</string>
    <string name="syrian">Syrian Aid</string>
    <string name="british_heart">British Heart Foundation</string>
    <string name="lebanese">Lebanon Red Cross</string>
    <string name="cancerUK">Cancer Research UK</string>
    <string name="Penalty">Choose Penal amount</string>
    <string name="title1">Today</string>
    <string name="unit1">Steps</string>

</resources>




