<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/DarkActionBarWithLightAccent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"

            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:fitsSystemWindows="true"
            android:theme="@style/DarkActionBarWithLightAccent">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_below="@+id/appbar"
        android:visibility="visible"
        android:id="@+id/layout_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_chharity"></TextView>

        <TextView  android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/Penalty">

        </TextView>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
           >

        </Spinner>

        <RelativeLayout android:layout_height="wrap_content"
    android:layout_width="match_parent">

</RelativeLayout>


        <LinearLayout

            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:id="@+id/layout_10"
                android:background="@drawable/bg_oval_green_stoke"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:gravity="center_vertical"
                >

                <TextView
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/syrian"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_20"
                android:background="@drawable/bg_oval_green_stoke"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:gravity="center_vertical"

                >

                <TextView
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/british_heart"
                    />
            </LinearLayout>




        </LinearLayout>
        <LinearLayout

            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:id="@+id/layout_30"
                android:background="@drawable/bg_oval_green_stoke"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:gravity="center_vertical"

                >

                <TextView
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lebanese"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_40"
                android:background="@drawable/bg_oval_green_stoke"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="160dp"
                android:layout_height="140dp"
                android:gravity="center_vertical"

                >

                <TextView
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancerUK"
                    />
            </LinearLayout>




        </LinearLayout>





    </LinearLayout>
    <Button
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"

        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_next"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:text="@string/next"
        android:textAllCaps="false"
        />


</RelativeLayout>