<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:gravity="">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/splash"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerInside"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="35dp"
            android:textColor="@color/black"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <customfonts.EditText_Roboto_Regular
                        android:id="@+id/email_address_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="9.33dp"
                        android:background="@drawable/rounded_grey"
                        android:hint="@string/email"
                        android:maxLength="30"
                        android:inputType="textEmailAddress"
                        android:textColor="#080812"
                        android:maxLines="1"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:textSize="13sp" />
                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <customfonts.EditText_Roboto_Regular

                        android:id="@+id/password_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="9.33dp"
                        android:background="@drawable/rounded_grey"
                        android:hint="@string/password"
                        android:maxLength="30"
                        android:inputType="textPassword"
                        android:textColor="#080812"
                        android:maxLines="1"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:textSize="13sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <customfonts.EditText_Roboto_Regular

                        android:id="@+id/confirm_password_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="9.33dp"
                        android:background="@drawable/rounded_grey"
                        android:hint="@string/re_password"
                        android:maxLength="30"
                        android:inputType="textPassword"
                        android:textColor="#080812"
                        android:maxLines="1"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:textSize="13sp" />
                </LinearLayout>






            </LinearLayout>

        </ScrollView>

        <customfonts.Button_Roboto_Medium
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="43dp"
            android:layout_marginEnd="43dp"
            android:layout_marginTop="30dp"
            android:text="@string/continue_next"
            android:textAllCaps="false"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an account? "
                android:fontFamily="sans-serif"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/signin_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign In"
                android:fontFamily="sans-serif"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>