<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".HomeActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/DarkActionBarWithLightAccent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:fitsSystemWindows="true"
            android:theme="@style/DarkActionBarWithLightAccent">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_below="@+id/appbar"
        android:id="@+id/imageUser"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="150dp"/>

    <TextView
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageUser"
        android:id="@+id/tv_name"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_margin="20dp"
        android:layout_below="@+id/tv_name"
        android:background="@drawable/bg_oval_green_stoke"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:text="Current Weight"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:id="@+id/tv_current"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tv_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView

                android:text="Current Weight"

                android:textColor="@color/black"
                android:id="@+id/tv_wins"
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView

                android:layout_toRightOf="@+id/tv_wins"
                android:text="Current Weight"

                android:textColor="@color/black"
                android:id="@+id/tv_losses"
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

    </RelativeLayout>

<Button
    android:layout_below="@+id/relative"
    android:layout_margin="10dp"
    android:id="@+id/btn_start"
    android:textColor="@color/white"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/start_competition"/>
    <LinearLayout
        android:gravity="center_horizontal"
       android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="50dp">

        <Button
            android:id="@+id/tv_arena"
            android:layout_margin="10dp"
            android:background="@color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arena"
            android:textColor="@color/white"
            android:textSize="14sp" />
        <Button
            android:id="@+id/tv_stats"
            android:layout_margin="10dp"
            android:background="@color/transparent"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/tv_settings"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:background="@color/transparent"
            android:textSize="14sp"
            android:text="@string/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>